--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,6 @@ img {
 	display: block;
 	width: 100%;
 	border-radius: 0.75rem;
-	opacity: .75;
 }
 
 .header {
@@ -59,6 +58,8 @@ img {
 }
 
 .attribution {
+	position: absolute;
+	bottom: 95%;
 	font-size: 12px;
 	text-align: center;
 }
